code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_17.wast
(assert_invalid
  (module (func $unbound-func (call 1)))
  "unknown function"
)